src/test/input/codegen/fail/declaration2.c
// Undeclared...

int main() {

    a = 5;

}